# mcd_regression

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
docs/examples/: example.ipynb  example.py
examples/: data.txt  example.ipynb  example.py
robust_linear_regression/: __init__.py  rlr.py
src/mcd_regression/: __init__.py  mcdr.py
